--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
         'card'
         'attribution';
     justify-items: center;
-    width: 20.4375rem; /*327*/
+    width: 20.4375rem;
 }
  
  /* style 1st component - mobile */
