--- a/style.css
+++ b/style.css
@@ -11,116 +11,91 @@
      --fw-500: 500;
      --fw-800: 800;
      --fs-14: 0.875rem;
-     --fs-purpose-date-author: clamp(12px, 0.6rem + 0.5vw, 14px); /*12-14*/
+     --fs-category-date-author: clamp(12px, 0.6rem + 0.5vw, 14px); /*12-14*/
      --fs-title: clamp(20px, 1.1rem + 0.5vw, 24px); /*20-24*/
      --fs-para: clamp(14px, 0.7rem + 0.5vw, 16px); /*14-16*/
  }
  
  body {
-     display: flex;
-     height: 100%;
-     justify-content: center;
-     align-items: center;
+     display: block;
+     min-height: 100vh; /*min-height: 100vh;*/
+     justify-items: center;
+     align-content: center;
+     /* place-content: center; */
      font-family: var(--ff-primary);
      background-color: var(--clr-yellow);
  }
  
  /*---------------------Mobile layout-------------------------*/
 
-.blog__cards {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-        'page__header'
-        'card'
-        'attribution';
-    justify-items: center;
-    width: 20.4375rem;
-}
- 
  /* style 1st component - mobile */
- .sr-only {
-     position: absolute;
-     width: 1px;
-     height: 1px;
-     padding: 0;
-     margin: -1px;
-     overflow: hidden;
-     clip: rect(0, 0, 0, 0);
-     white-space: nowrap;
-     border: 0;
- }
- 
- /* style 2nd component - mobile */
-.card {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-        'blog__header'
-        'blog__content'
-        'blog__footer';
-    gap: 1.5rem;
+ .blog {
+    max-width: 20.4375rem; /*327 - 501*/
+   /*  gap: 1.5rem; */
     padding: 1.5rem;
-    justify-items: start;
-    border-radius: 1.25rem;
+    border-radius: 1.25rem; /*20*/
     box-shadow: 8px 8px #000000;
     background-color: var(--clr-white);
 }
-
+ 
 .blog__image {
-   width: 100%;
-   height: 12.5rem;
-   border-radius: 0.625rem;
-   justify-self: center;
-   object-fit: cover;
+    width: 100%; /*279*/
+    max-height: 12.5rem; /*200*/
+    border-radius: 0.625rem; /*10*/
+    /* justify-self: center; */
+    object-fit: cover;
+    /* padding-bottom: 1.5rem; */
+ }
+ 
+ .blog__content {
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem 0 1.5rem 0;
+    gap: .75rem; /*12*/
 }
 
-.blog__content {
-    display: grid;
-    gap: 0.75rem;
-}
-
-.blog__label {
-    display: grid;
-    width: 4.5625rem;
+.blog__category {
+    min-width: 5.125rem; /*82*/
+    max-width: 4.5625rem; /*73 26*/
     align-items: center;
-    border-radius: .25rem;
-    padding: 0.25rem 0.75rem;
+    border-radius: .25rem; /*4*/
+    padding: 0.25rem 0.75rem; /*4 12*/
     background-color: var(--clr-yellow);
+    /* border: 2px solid green; */
 }
 
-.blog__label--learning {
+.blog__category--learning {
     color: var(--clr-gray-950);
-    font-size: var(--fs-purpose-date-author);
+    font-size: var(--fs-category-date-author);
     font-weight: var(--fw-800);
 }
 
 .blog__date {
-    font-size: var(--fs-purpose-date-author);
+    max-width: 7.6875rem; /*123 18*/
+    font-size: var(--fs-category-date-author);
     font-weight: var(--fw-500);
     color: var(--clr-gray-950);
+    /* border: 2px solid green; */
 }
 
 .blog__title {
-   color: var(--clr-gray-950);
-   font-size: var(--fs-title); 
-   font-weight: var(--fw-800);
-   text-decoration: none;
-   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.blog__paragraph {
+    color: var(--clr-gray-950);
+    font-size: var(--fs-title); 
+    font-weight: var(--fw-800);
+    text-decoration: none;
+    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+ }
+ 
+ .blog__description {
     color: var(--clr-gray-500);
     font-weight: var(--fw-500);
     font-size: var(--fs-para);
 }
-
-.blog__footer {
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-areas:
-        'blog__author-image blog__author-name';
+ 
+.blog__author {
+    display: flex;
     gap: .75rem; /*12*/
+    max-width: 8.0625rem;
     align-items: center;
     justify-items: start;
 }
@@ -137,71 +112,26 @@
     color: var(--clr-gray-950);
 }
  
- /* style 3rd component - mobile */
- /* 3rd component is styled in external file */
+ /* style 2nd component - mobile */
+ /* 2nd component is styled in external file */
  
+
  /*---------------------Desktop layout-------------------------*/
  @media screen and (min-width: 48rem) {
  
- .blog__cards {
-     width: 24rem;
- }
- 
  /* style 1st component - desktop */
- /*No style*/
- 
- /*style 2nd component - desktop */
- .blog__image {
-    padding: 0;
-    margin: 0;
-}
-
-.blog__label {
-   width: 5.125rem;
-}
-
-.blog__title:hover {
-   cursor: pointer;
-   color: var(--clr-yellow);
-   text-shadow: none;
-}
- 
- /* style 3rd component - mobile */
- /* 3rd component is styled in external file */
- 
+ .blog {
+     max-width: 24rem;
  }
  
- 
- /*---------grid area name--------------*/
- 
- .page__header {
-    grid-area: page__header;
+ .blog__date {
+    min-width: 8.9375rem; /*143 21*/
  }
  
- .card {
-     grid-area: card;
- }
+ /* style 2nd component - mobile */
+ /* 2nd component is styled in external file */
  
- .blog__header {
-     grid-area: blog__header;
  }
+  
  
- .blog__content {
-     grid-area: blog__content;
- }
  
- .blog__footer {
-     grid-area: blog__footer;
- }
- 
- .blog__author-image {
-    grid-area: blog__author-image;
- }
- 
- .blog__author-name {
-    grid-area: blog__author-name;
- }
- 
- .attribution {
-    grid-area: attribution;
- }
